# scrollshot

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
src/: capture.rs  cli.rs  error.rs  main.rs  region.rs  screen_rect.rs  scroll.rs  stitch.rs  window.rs
