[package]
name = "scrollshot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
imageproc = { version = "0.26.0", default-features = false }
thiserror = "2.0.17"
xcap = "0.9.4"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
