[package]
name = "scrollshot"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.26", default-features = false }
thiserror = "2"
average = "0.17"
rayon = "1"
xcap = "0.9"
enigo = "0.6"
log = "0.4"
env_logger = "0.11"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
